--- a/.github/workflows/synopsys-io.yml
+++ b/.github/workflows/synopsys-io.yml
@@ -25,8 +25,8 @@ jobs:
           polaris_project_name: ${{ github.event.repository.name }}
           
           ### PULL REQUEST COMMENTS: Uncomment below to enable
-          polaris_prComment_enabled: true 
-          github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
+         # polaris_prComment_enabled: true 
+          #github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
 
           ### SARIF report parameters
           #polaris_reports_sarif_create: true
