--- a/.github/workflows/synopsys-io.yml
+++ b/.github/workflows/synopsys-io.yml
@@ -23,7 +23,7 @@ jobs:
           ### SCANNING: Optional fields
           polaris_application_name: ${{ github.event.repository.name }}
           polaris_project_name: ${{ github.event.repository.name }}
-          polaris.waitForScan_enabled: true
+          polaris_waitForScan: true
           ### PULL REQUEST COMMENTS: Uncomment below to enable
          # polaris_prComment_enabled: true 
           #github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
